Refactor ProjectService: reemplazar excepciones genéricas por InvalidProjectDataException, ProjectNotFoundException y UserNotFoundException para mejorar el manejo de errores; agregar clases InvalidProjectDataException y ProjectNotFoundException.